--- a/index.html
+++ b/index.html
@@ -14,13 +14,22 @@
   <body>
     <!-- Splash overlay: displayed on initial load; hidden after user interaction -->
     <div id="splash-overlay" class="splash-overlay">
-      <img src="assets/logo.png" alt="Metro Property Care logo" class="splash-logo" />
+      <img
+        src="assets/logo.png"
+        alt="Metro Property Care logo"
+        class="splash-logo"
+        onerror="this.onerror=null;this.src='assets/logo.svg';"
+      />
     </div>
 
     <!-- Sticky header with logo and navigation -->
     <header class="site-header">
       <div class="logo">
-        <img src="assets/logo.png" alt="Metro Property Care" />
+        <img
+          src="assets/logo.png"
+          alt="Metro Property Care"
+          onerror="this.onerror=null;this.src='assets/logo.svg';"
+        />
       </div>
       <nav class="nav-links">
         <a href="#about">About</a>
