Point hero and splash to real assets with fallbacks

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <!-- WARNING: assets/logo.png is not present in this repo snapshot; SVG fallback will be used. -->
     <!-- Splash overlay: displayed on initial load; hidden after user interaction -->
     <div id="splash-overlay" class="splash-overlay" aria-hidden="true">
       <img
