Add SEO metadata and sitemap

--- a/index.html
+++ b/index.html
@@ -3,13 +3,68 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Metro Property Care</title>
+    <title>Metro Property Care | Detroit-built iron components. Nationwide distribution.</title>
+    <meta
+      name="description"
+      content="Detroit-built iron craftsmanship with nationwide shipping. Railings, step rails, gates, fencing, fabricated parts, and hardware."
+    />
+    <!-- TODO: Replace canonical URL with the live domain when available. -->
+    <link rel="canonical" href="https://metropropertycare.com/" />
+    <meta name="robots" content="index, follow" />
+    <meta name="theme-color" content="#F7F7F5" />
+    <meta
+      property="og:title"
+      content="Metro Property Care | Detroit-built iron components. Nationwide distribution."
+    />
+    <meta
+      property="og:description"
+      content="Detroit-built iron craftsmanship with nationwide shipping. Railings, step rails, gates, fencing, fabricated parts, and hardware."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://metropropertycare.com/" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Metro Property Care | Detroit-built iron components. Nationwide distribution."
+    />
+    <meta
+      name="twitter:description"
+      content="Detroit-built iron craftsmanship with nationwide shipping. Railings, step rails, gates, fencing, fabricated parts, and hardware."
+    />
     <!--
       This is a simple static entry point for Metro Property Care. When you migrate this into
       a framework (e.g. Next.js), break sections into components and import the
       shared styles from style.css. The splash animation is handled via script.js.
     -->
     <link rel="stylesheet" href="style.css" />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@graph": [
+          {
+            "@type": "Organization",
+            "name": "Metro Property Care",
+            "url": "https://metropropertycare.com/",
+            "email": "contact@metropropertycare.com",
+            "description": "Detroit-built iron craftsmanship with nationwide shipping. Railings, step rails, gates, fencing, fabricated parts, and hardware.",
+            "contactPoint": [
+              {
+                "@type": "ContactPoint",
+                "contactType": "customer support",
+                "email": "contact@metropropertycare.com",
+                "availableLanguage": ["en"]
+              }
+            ],
+            "sameAs": []
+          },
+          {
+            "@type": "WebSite",
+            "name": "Metro Property Care",
+            "url": "https://metropropertycare.com/"
+          }
+        ]
+      }
+    </script>
   </head>
   <body>
     <!-- WARNING: assets/logo.png is not present in this repo snapshot; SVG fallback will be used. -->
@@ -203,7 +258,7 @@
       <!-- About / Partnership section -->
       <section id="about" class="content-section">
         <div class="section-header fade-section">
-          <h2>About / Partnership</h2>
+          <h2>Partnership with Icon Iron Rail</h2>
           <p>
             Metro Property Care is the e-commerce and national distribution extension for Icon Iron
             Rail, expanding fabrication excellence beyond the local market.
@@ -227,7 +282,7 @@
       <!-- Ordering & Shipping Standards -->
       <section id="ordering" class="content-section surface-muted">
         <div class="section-header fade-section">
-          <h2>Ordering &amp; Shipping Standards</h2>
+          <h2>Ordering, Shipping &amp; Quality Standards</h2>
           <p>Systems that keep projects moving, built for contractors and builders.</p>
         </div>
         <div class="standards-grid">
@@ -283,7 +338,7 @@
         </div>
       </section>
 
-      <section class="content-section trust-strip">
+      <section class="content-section trust-strip" aria-label="Built on Detroit standards">
         <div class="trust-inner fade-section">
           <span class="trust-title">Built on Detroit standards</span>
           <div class="trust-points">
