Refine motion tokens and reveal behavior

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <main>
       <!-- Hero section with calm imagery and product positioning -->
       <section id="hero" class="hero-section">
-        <div class="hero-content fade-section">
+        <div class="hero-content">
           <span class="eyebrow">Detroit-built iron craftsmanship</span>
           <h1>Metro Property Care</h1>
           <p class="hero-subtitle">
@@ -132,7 +132,7 @@
 
       <!-- Fast actions -->
       <section id="fast-actions" class="content-section">
-        <div class="section-header fade-section">
+        <div class="section-header reveal-heading">
           <h2>Fast Actions</h2>
           <p>
             Direct paths for contractors, builders, and property teams who need reliable iron
@@ -140,19 +140,19 @@
           </p>
         </div>
         <div class="cards-grid">
-          <a class="card card-link fade-section" href="#shop">
+          <a class="card card-link reveal-fade" href="#shop">
             <h3>Shop Components</h3>
             <p>Browse iron parts, rail systems, and hardware for standard and custom jobs.</p>
           </a>
-          <a class="card card-link fade-section" href="#bulk-pricing">
+          <a class="card card-link reveal-fade" href="#bulk-pricing">
             <h3>Request Contractor / Bulk Pricing</h3>
             <p>Share quantities, timelines, and delivery destinations for tailored pricing.</p>
           </a>
-          <a class="card card-link fade-section" href="#order-support">
+          <a class="card card-link reveal-fade" href="#order-support">
             <h3>Order Support</h3>
             <p>Get help with measurements, compatibility, and lead-time coordination.</p>
           </a>
-          <a class="card card-link fade-section" href="#contact">
+          <a class="card card-link reveal-fade" href="#contact">
             <h3>Contact</h3>
             <p>Reach the Metro Property Care team for quotes or support follow-ups.</p>
           </a>
@@ -161,34 +161,34 @@
 
       <!-- Product categories -->
       <section id="shop" class="content-section surface-muted">
-        <div class="section-header fade-section">
+        <div class="section-header reveal-heading">
           <h2>Product Categories</h2>
           <p>
             A national catalog of iron components built from Detroit fabrication standards.
           </p>
         </div>
         <div class="cards-grid">
-          <article class="card fade-section">
+          <article class="card reveal-fade">
             <h3>Wrought Iron Railings</h3>
             <p>Residential and commercial railings with proven fit and finish.</p>
           </article>
-          <article class="card fade-section">
+          <article class="card reveal-fade">
             <h3>Step Rails</h3>
             <p>Standard-size step rails for common stair and porch applications.</p>
           </article>
-          <article class="card fade-section">
+          <article class="card reveal-fade">
             <h3>Custom Gates</h3>
             <p>Fabricated gate solutions for security, access, and curb appeal.</p>
           </article>
-          <article class="card fade-section">
+          <article class="card reveal-fade">
             <h3>Iron Fencing &amp; Sections</h3>
             <p>Fence panels, sections, and compatible components.</p>
           </article>
-          <article class="card fade-section">
+          <article class="card reveal-fade">
             <h3>CNC Plasma Cutting / Fabricated Parts</h3>
             <p>Custom-cut parts for builders, integrators, and metalwork projects.</p>
           </article>
-          <article class="card fade-section">
+          <article class="card reveal-fade">
             <h3>Accessories &amp; Hardware</h3>
             <p>Mounting kits, fasteners, post shoes, and install-ready add-ons.</p>
           </article>
@@ -196,14 +196,14 @@
       </section>
 
       <section id="bulk-pricing" class="content-section">
-        <div class="section-header fade-section">
+        <div class="section-header reveal-heading">
           <h2>Request Contractor / Bulk Pricing</h2>
           <p>
             Send your quantities and schedules for bulk quotes, takeoff assistance, and
             multi-location delivery planning.
           </p>
         </div>
-        <form id="bulk-pricing-form" class="quote-form fade-section" action="mailto:contact@metropropertycare.com">
+        <form id="bulk-pricing-form" class="quote-form reveal-fade" action="mailto:contact@metropropertycare.com">
           <div class="form-grid">
             <label class="form-field">
               <span>Name *</span>
@@ -257,7 +257,7 @@
 
       <!-- About / Partnership section -->
       <section id="about" class="content-section">
-        <div class="section-header fade-section">
+        <div class="section-header reveal-heading">
           <h2>Partnership with Icon Iron Rail</h2>
           <p>
             Metro Property Care is the e-commerce and national distribution extension for Icon Iron
@@ -265,13 +265,13 @@
           </p>
         </div>
         <div class="split-content">
-          <p class="fade-section">
+          <p class="reveal-fade">
             We operate as a dedicated distribution partner so Icon Iron Rail can stay focused on
             fabrication and local storefront relationships. Metro Property Care handles national
             ordering, packaging, and shipping for contractors and property professionals who need
             dependable ironwork shipped on schedule.
           </p>
-          <p class="fade-section">
+          <p class="reveal-fade">
             Every order follows Detroit shop discipline: clear communication, measured tolerances,
             and accountability from quote to delivery. The goal is simple—iron components that arrive
             ready to install and perform.
@@ -281,36 +281,36 @@
 
       <!-- Ordering & Shipping Standards -->
       <section id="ordering" class="content-section surface-muted">
-        <div class="section-header fade-section">
+        <div class="section-header reveal-heading">
           <h2>Ordering, Shipping &amp; Quality Standards</h2>
           <p>Systems that keep projects moving, built for contractors and builders.</p>
         </div>
         <div class="standards-grid">
-          <article class="card fade-section">
+          <article class="card reveal-fade">
             <h3>Simple checkout</h3>
             <p>Order by part, by size, or by project grouping without extra friction.</p>
           </article>
-          <article class="card fade-section">
+          <article class="card reveal-fade">
             <h3>Clear lead-times</h3>
             <p>Standard items and custom fabrication timelines are always defined upfront.</p>
           </article>
-          <article class="card fade-section">
+          <article class="card reveal-fade">
             <h3>Order confirmation discipline</h3>
             <p>Every order is confirmed with measurements, quantities, and delivery details.</p>
           </article>
-          <article class="card fade-section">
+          <article class="card reveal-fade">
             <h3>Nationwide shipping</h3>
             <p>Residential, commercial, and jobsite delivery options across the U.S.</p>
           </article>
-          <article class="card fade-section">
+          <article class="card reveal-fade">
             <h3>Packaging built for metal</h3>
             <p>Protective packing engineered to safeguard metal finish and fit.</p>
           </article>
-          <article class="card fade-section">
+          <article class="card reveal-fade">
             <h3>Fit + function first</h3>
             <p>Every component is fabricated to install cleanly and perform reliably.</p>
           </article>
-          <article class="card fade-section">
+          <article class="card reveal-fade">
             <h3>Finish &amp; hardware clarity</h3>
             <p>Clear specs on coatings, hardware, and installation compatibility.</p>
           </article>
@@ -318,7 +318,7 @@
       </section>
 
       <section id="order-support" class="content-section support-band">
-        <div class="support-inner fade-section">
+        <div class="support-inner reveal-fade">
           <div>
             <h2>Order Support</h2>
             <p>Quick guidance for sizing, delivery timing, and project coordination.</p>
@@ -339,7 +339,7 @@
       </section>
 
       <section class="content-section trust-strip" aria-label="Built on Detroit standards">
-        <div class="trust-inner fade-section">
+        <div class="trust-inner reveal-fade">
           <span class="trust-title">Built on Detroit standards</span>
           <div class="trust-points">
             <span>Accurate specs &amp; honest lead-times</span>
@@ -351,26 +351,26 @@
 
       <!-- FAQs -->
       <section id="faqs" class="content-section">
-        <div class="section-header fade-section">
+        <div class="section-header reveal-heading">
           <h2>FAQs</h2>
           <p>Contractor guidance for quoting, lead-times, and fit questions.</p>
         </div>
         <div class="faq-list">
-          <article class="card fade-section">
+          <article class="card reveal-fade">
             <h3>How should contractors submit a bulk request?</h3>
             <p>
               Send quantities, dimensions, finish preferences, and ship-to ZIP codes to
               <a href="mailto:contact@metropropertycare.com">contact@metropropertycare.com</a>.
             </p>
           </article>
-          <article class="card fade-section">
+          <article class="card reveal-fade">
             <h3>Can I confirm lead-times before ordering?</h3>
             <p>
               Yes. We provide clear lead-time guidance for standard vs. custom fabricated parts
               before checkout or quote approval.
             </p>
           </article>
-          <article class="card fade-section">
+          <article class="card reveal-fade">
             <h3>Do you help validate measurements?</h3>
             <p>
               We review measurements and application details to ensure components arrive ready to
@@ -382,14 +382,14 @@
 
       <!-- Contact section -->
       <section id="contact" class="content-section surface-muted">
-        <div class="section-header fade-section">
+        <div class="section-header reveal-heading">
           <h2>Contact</h2>
           <p>
             For quoting, ordering, or support, reach us at
             <a href="mailto:contact@metropropertycare.com">contact@metropropertycare.com</a>.
           </p>
         </div>
-        <div class="contact-card fade-section">
+        <div class="contact-card reveal-fade">
           <p>
             Provide the product category (railing, gate, step rail, fencing, plasma-cut part,
             accessories), measurements, quantity, ship-to ZIP, timeline, and company name for bulk
