--- a/index.html
+++ b/index.html
@@ -87,15 +87,17 @@
           onerror="this.onerror=null;this.src='assets/logo.svg';"
         />
       </div>
-      <nav class="nav-links">
-        <a href="#hero">Home</a>
-        <a href="#fast-actions">Actions</a>
-        <a href="#shop">Categories</a>
-        <a href="#bulk-pricing">Bulk Pricing</a>
-        <a href="#about">About</a>
-        <a href="#ordering">Standards</a>
-        <a href="#faqs">FAQs</a>
-        <a href="#contact">Contact</a>
+      <button class="nav-toggle" type="button" aria-controls="primary-nav" aria-expanded="false">
+        <span class="toggle-icon" aria-hidden="true"></span>
+        Menu
+      </button>
+      <nav class="nav-links" id="primary-nav">
+        <a href="/">Home</a>
+        <a href="/shop">Shop</a>
+        <a href="/categories">Categories</a>
+        <a href="/bulk-pricing">Bulk Pricing</a>
+        <a href="/order-support">Order Support</a>
+        <a href="/contact">Contact</a>
       </nav>
     </header>
 
@@ -118,8 +120,8 @@
             holds up.
           </p>
           <div class="hero-actions">
-            <a href="#bulk-pricing" class="button-primary">Request Contractor / Bulk Pricing</a>
-            <a href="#shop" class="button-secondary">Shop Components</a>
+            <a href="/bulk-pricing" class="button-primary">Request Contractor / Bulk Pricing</a>
+            <a href="/shop" class="button-secondary">Shop Components</a>
           </div>
           <p class="hero-helper">
             Email support:
@@ -140,19 +142,19 @@
           </p>
         </div>
         <div class="cards-grid">
-          <a class="card card-link reveal-fade" href="#shop">
+          <a class="card card-link reveal-fade" href="/shop">
             <h3>Shop Components</h3>
             <p>Browse iron parts, rail systems, and hardware for standard and custom jobs.</p>
           </a>
-          <a class="card card-link reveal-fade" href="#bulk-pricing">
+          <a class="card card-link reveal-fade" href="/bulk-pricing">
             <h3>Request Contractor / Bulk Pricing</h3>
             <p>Share quantities, timelines, and delivery destinations for tailored pricing.</p>
           </a>
-          <a class="card card-link reveal-fade" href="#order-support">
+          <a class="card card-link reveal-fade" href="/order-support">
             <h3>Order Support</h3>
             <p>Get help with measurements, compatibility, and lead-time coordination.</p>
           </a>
-          <a class="card card-link reveal-fade" href="#contact">
+          <a class="card card-link reveal-fade" href="/contact">
             <h3>Contact</h3>
             <p>Reach the Metro Property Care team for quotes or support follow-ups.</p>
           </a>
@@ -166,6 +168,10 @@
           <p>
             A national catalog of iron components built from Detroit fabrication standards.
           </p>
+          <div class="inline-links">
+            <a class="link-cta" href="/categories">Explore categories</a>
+            <a class="link-cta" href="/shop">Shop components</a>
+          </div>
         </div>
         <div class="cards-grid">
           <article class="card reveal-fade">
@@ -202,8 +208,15 @@
             Send your quantities and schedules for bulk quotes, takeoff assistance, and
             multi-location delivery planning.
           </p>
+          <div class="inline-links">
+            <a class="link-cta" href="/bulk-pricing">Go to full bulk pricing page</a>
+          </div>
         </div>
-        <form id="bulk-pricing-form" class="quote-form reveal-fade" action="mailto:contact@metropropertycare.com">
+        <form
+          id="bulk-pricing-form"
+          class="quote-form reveal-fade"
+          action="mailto:contact@metropropertycare.com?subject=Contractor%20%2F%20Bulk%20Pricing%20Request"
+        >
           <div class="form-grid">
             <label class="form-field">
               <span>Name *</span>
@@ -322,6 +335,7 @@
           <div>
             <h2>Order Support</h2>
             <p>Quick guidance for sizing, delivery timing, and project coordination.</p>
+            <a class="link-cta" href="/order-support">View order support details</a>
           </div>
           <div class="support-actions">
             <a
@@ -354,27 +368,32 @@
         <div class="section-header reveal-heading">
           <h2>FAQs</h2>
           <p>Contractor guidance for quoting, lead-times, and fit questions.</p>
+          <div class="inline-links">
+            <a class="link-cta" href="/faqs">Read all FAQs</a>
+          </div>
         </div>
         <div class="faq-list">
           <article class="card reveal-fade">
-            <h3>How should contractors submit a bulk request?</h3>
-            <p>
-              Send quantities, dimensions, finish preferences, and ship-to ZIP codes to
-              <a href="mailto:contact@metropropertycare.com">contact@metropropertycare.com</a>.
-            </p>
+            <h3>Do you offer standard sizes?</h3>
+            <p>Yes. We stock standard sizing for common stair, porch, and railing applications.</p>
           </article>
           <article class="card reveal-fade">
-            <h3>Can I confirm lead-times before ordering?</h3>
-            <p>
-              Yes. We provide clear lead-time guidance for standard vs. custom fabricated parts
-              before checkout or quote approval.
-            </p>
+            <h3>Do you build custom components?</h3>
+            <p>Yes. Share measurements and mounting details so we can confirm fit and pricing.</p>
           </article>
           <article class="card reveal-fade">
-            <h3>Do you help validate measurements?</h3>
+            <h3>Do you work with contractors or property groups?</h3>
+            <p>Yes. Contractor pricing, takeoff support, and delivery coordination are available.</p>
+          </article>
+          <article class="card reveal-fade">
+            <h3>Do you ship nationwide?</h3>
+            <p>Yes. We ship throughout the United States with jobsite and residential delivery.</p>
+          </article>
+          <article class="card reveal-fade">
+            <h3>Is Metro the fabricator?</h3>
             <p>
-              We review measurements and application details to ensure components arrive ready to
-              install.
+              Metro Property Care distributes nationwide. Fabrication is completed through Icon
+              Iron Rail.
             </p>
           </article>
         </div>
@@ -388,6 +407,9 @@
             For quoting, ordering, or support, reach us at
             <a href="mailto:contact@metropropertycare.com">contact@metropropertycare.com</a>.
           </p>
+          <div class="inline-links">
+            <a class="link-cta" href="/contact">Contact details</a>
+          </div>
         </div>
         <div class="contact-card reveal-fade">
           <p>
@@ -405,7 +427,7 @@
         <a class="link-cta" href="mailto:contact@metropropertycare.com"
           >contact@metropropertycare.com</a
         >
-        <a class="link-cta" href="#bulk-pricing">Request Bulk Pricing</a>
+        <a class="link-cta" href="/bulk-pricing">Request Bulk Pricing</a>
       </div>
       <p class="footer-attribution">
         <a href="https://feethedeveloper.com" target="_blank" rel="noopener">by Fee The Developer</a>
