--- a/bulk-pricing/index.html
+++ b/bulk-pricing/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="no-js">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script>document.documentElement.classList.remove('no-js');</script>
     <title>Contractor / Bulk Pricing | Metro Property Care</title>
     <meta
       name="description"
